--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
                 <h6 class="m-0 font-weight-bold text-primary"><i class="fas fa-satellite-dish me-2"></i> Monitor en Vivo</h6>
                 <div class="dropdown no-arrow">
                     <select class="form-select form-select-sm shadow-none border-0 bg-light" id="filtroArea">
-                        <option value="todas">🏢 Todas las Áreas</option>
+                        <option value="todas">Todas las Áreas</option>
                         {% for area in areas %}
                         <option value="{{ area }}">{{ area }}</option>
                         {% endfor %}
