--- a/templates/data.html
+++ b/templates/data.html
@@ -199,7 +199,7 @@
 
                     if (!file) return;
 
-                    if (!confirm(`¿Subir nueva foto para ${nombre} a todas las cámaras?`)) return;
+                    if (!confirm(`¿Subir nueva foto para ${nombre}?`)) return;
 
                     const formData = new FormData();
                     formData.append('archivo_foto', file);
